<resources>
    <string name="app_name">Tantrix</string>

    <string name="main_activity">mainMenuActivity</string>
    <string name="settings_activity">settingsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to Tantrix</string>
    <string name="instructions">Instructions</string>
    <string name="startGame">Play</string>
    <string name="settings">Settings</string>

    <string name="solitaire">Solitaire</string>
    <string name="against_bots">Against bots</string>
    <string name="hotseat">Hotseat</string>
    <string name="return_back">Back</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>

    <string name="limited_time">Limited time</string>
    <string name="unlimited_time">Unlimited time</string>

    <string name="two_players">Two players</string>
    <string name="three_players">Three players</string>
    <string name="four_players">Four players</string>
    <string name="choose_colors">Choose colors</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="player_1_color">Player\'s 1 color</string>
    <string name="player_2_color">Player\'s 2 color</string>
    <string name="player_3_color">Player\'s 3 color</string>
    <string name="player_4_color">Player\'s 4 color</string>

    <string name="error_message_unique_colors">All players should have unique colors</string>
    <string name="color_skin">Color skin</string>
    <string name="choose_language">Choose language</string>
    <string name="hints">Hints</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="pause">Pause</string>
    <string name="exit_game">Exit game</string>
    <string name="resume">Resume</string>
    <string name="enemy1">e1</string>
    <string name="enemy2">e2</string>
    <string name="enemy3">e3</string>
</resources>
